# django-wedding-website

./: .gitignore  DEVELOPMENT.md  Dockerfile  README.md  buildspec.yml  mrpxaleweddingdb  pyproject.toml  pyvenv.cfg  requirements.txt
.ebextensions/: 01_django.config
bigday/: settings.py
bigday/templates/: home.html
mrpxalewedding/: .gitignore  buildspec.yml  fabfile.py  fabfile.py.bak
mrpxalewedding/bigday/: settings.py  urls.py
mrpxalewedding/bigday/templates/: base.html  home.html
mrpxalewedding/bigday/templates/partials/: event.html  wedding-party.html
mrpxalewedding/guests/: admin.py  csv_import.py  invitation.py  models.py  save_the_date.py  urls.py  views.py
mrpxalewedding/guests/migrations/: 0001_initial.py  0002_auto_20160116_1653.py  0003_guest_is_child.py  0004_party_category.py  0005_auto_20160123_1515.py  0006_auto_20160207_2116.py  0007_auto_20160207_2119.py  0008_auto_20160214_1642.py  0009_guest_meal.py  0010_auto_20160320_1338.py  0011_auto_20160320_1342.py  0012_auto_20160326_1232.py  0013_auto_20160326_1235.py  0014_auto_20160326_1447.py  0015_party_comments.py  0016_party_rehearsal_dinner.py  0017_auto_20220807_2143.py
mrpxalewedding/guests/tests/: test_guest_models.py  test_importer.py
mrpxalewedding/wedding/: apps.py  urls.py  views.py
static_root/: validator.js
static_root/bigday/css/: creative.css  custom_font.css  invitation.css  rsvp-confirmation.css
static_root/bigday/js/: footer.js
static_root/bootstrap-3.3.6-dist/js/: bootstrap.min.js
static_root/creative/js/: cbpAnimatedHeader.js  creative.js  jquery.fittext.js
(+4 files in other folders)
