[tool.poetry]
name = "django-wedding-website"
version = "0.1.0"
description = "Mitraj and Ale's Wedding Website!"
authors = ["Mitraj Parmar <mitrajparmar93@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
asgiref = "3.8.1"
bcrypt = "4.1.2"
cffi = "1.16.0"
cryptography = "42.0.5"
decorator = "5.1.1"
deprecated = "1.2.14"
django = "5.0.3"
django-storages = "1.14.2"
fabric = "3.2.2"
gunicorn = "21.2.0"
invoke = "2.2.0"
packaging = "24.0"
paramiko = "3.4.0"
psycopg2-binary = "2.9.9"
pycparser = "2.21"
pynacl = "1.5.0"
sqlparse = "0.4.4"
typing-extensions = "4.10.0"
wrapt = "1.16.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
